# Emilia

./: .gitignore  Cargo.toml  README.md  go.mod  main.go
.github/workflows/: GoCFScan.yml  RustCFScan.yml  sync.yml
Data/: Country-ALIVE.txt  IPPROXY23K.txt  alive.txt
src/: main.rs
useragent/: uagen.go
