[package]
name = "cekproxy"
version = "0.1.0"
# Menggunakan edisi 2021 yang lebih stabil dan umum digunakan.
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
native-tls = "0.2"
tokio-native-tls = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
