[package]
name = "cekproxy"
version = "0.1.0"
# Menggunakan edisi 2021 yang lebih stabil dan umum digunakan.
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
native-tls = "0.2"
tokio-native-tls = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
